# poc_act_imitation_learning

./: .gitignore  README.md  dataset.py  evaluate_policy.py  model_config.py  models.py  pyproject.toml  replay_collected_data.py  replay_recorded_data.py  sample.py  teleoperation_and_data_collection.py  teleoperation_config.py  train.py
assets/urdf/meshes/: L0.stl  L2.stl
examples/dynamixel/: client_sync_read.py  client_sync_write.py  read_control_table.py  write_control_table.py
examples/robot_client/: check_get_present_q_response_time.py  check_make_control_enable.py  get_leader_current_q.py  get_leader_follower_current_q.py  move_p_rpy.py  move_p_xyz.py  move_p_xyz_rpy.py  move_q.py  read_robot_status.py  servo_dq.py  teleoperation.py
examples/visualization/: visualize_fk_frame.py  visualize_jacobian_direction.py  visualize_jacobian_ik_rpy.py  visualize_jacobian_ik_xyz.py  visualize_jacobian_ik_xyz_rpy.py
experimental/: dataset.py
experimental/share_queue/: shared_queue.py
koch11/: camera.py
koch11/core/: robot_client.py
koch11/core/kinematics/: kinematics.py  math_utils.py
koch11/dynamixel/: dynamixel_client.py  dynamixel_robot_client.py  koch11.py  robot_client.py
koch11/urdf/: koch11.urdf
koch11/urdf/meshes/: L1.stl  L3.stl  L4.stl  L5.stl
models/: act.py  backbones.py  loss.py
